# Compilers-2021.2

./: .gitignore
modules/01/: 32bit-hex.l  EZLang.l  lab01  minusculafy.l  placas.l  remove_shell_comments.l  testa_ezl.sh
modules/01/CC_Lab01_Tarefa/: gen_tests.sh
modules/01/exercícios/: 32bit-hex.l  minusculafy.l  placas.l  remove_shell_comments.l
modules/01/in/: c06.ezl
modules/01/tarefa/: lab01  testa_ezl.sh
modules/02/CC_Lab02_Exercicios/ex04/: ex04  parser.c  parser.h  parser.y  scanner.c
modules/02/CC_Lab02_Tarefa/: gen_tests.sh
modules/02/exercícios/: 1.l  1.y  2.l  2.y  3.l  3.y  4.l  4.y  5.l  5.y  6.l  6.y  7.l  7.y  Makefile
modules/02/exercícios/lalrpop/: Cargo.toml
modules/02/exercícios/lalrpop/src/: ast3.rs  ast4.rs  ex1.lalrpop  ex2.lalrpop  ex3.lalrpop  ex4.lalrpop  main.rs
modules/02/tarefa/: Makefile  gen_tests.sh  tarefa2.l  tarefa2.y
